ripp fill , alt.v ripping 2 vertices #63247

Closed
opened 2019-04-03 15:37:14 +02:00 by ward · 7 comments

win 10
intel i5
amd radeon

blender 2.8 and 2.7
99d4321eff6

NOt usre if this is a bug , since it's the same behaviour as in blender 2.79 ...

When a single vertice is alt ripped , bot vertices at either side stay intact ( see screenshot 1 ) , which is expected behaviour
When two (neighbouring ) vertices are alt ripped , the ( unselected ) vertice at the far right ( screenshot 2 ) is also ripped , only noticeable after moving the vertice .
If this is expected behaviour , then it should also be the case in example 1
1.jpg

2.jpg

win 10 intel i5 amd radeon blender 2.8 and 2.7 99d4321eff6 NOt usre if this is a bug , since it's the same behaviour as in blender 2.79 ... When a single vertice is alt ripped , bot vertices at either side stay intact ( see screenshot 1 ) , which is expected behaviour When two (neighbouring ) vertices are alt ripped , the ( unselected ) vertice at the far right ( screenshot 2 ) is also ripped , only noticeable after moving the vertice . If this is expected behaviour , then it should also be the case in example 1 ![1.jpg](https://archive.blender.org/developer/F6909066/1.jpg) ![2.jpg](https://archive.blender.org/developer/F6909068/2.jpg)
Author

Added subscriber: @gentleclockdivider

Added subscriber: @gentleclockdivider

Added subscriber: @ZedDB

Added subscriber: @ZedDB

I can not reproduce:

recording.mp4

Maybe it only happens in certain circumstances?

I can not reproduce: [recording.mp4](https://archive.blender.org/developer/F6909169/recording.mp4) Maybe it only happens in certain circumstances?
Author

It's not happening in you example the because the rightmost vertice is not the last one .
There should not be any vertices after it .
See screenshot 1

It's not happening in you example the because the rightmost vertice is not the last one . There should not be any vertices after it . See screenshot 1
Sebastian Parborg self-assigned this 2019-04-04 12:01:42 +02:00

I've uploaded a fix: D4646

I've uploaded a fix: [D4646](https://archive.blender.org/developer/D4646)

This issue was referenced by c3a11a5671

This issue was referenced by c3a11a56711aa8d92225b1fb8efb21e3eeb5d148

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63247
No description provided.