source/blender/bmesh/tools/bmesh_edgesplit.c
@@ -78,11 +78,12 @@ void BM_mesh_edgesplit(BMesh *bm,
       }
     }
   }
-
-  BM_ITER_MESH (e, &iter, bm, BM_EDGES_OF_MESH) {
-    if (BM_elem_flag_test(e, BM_ELEM_TAG)) {
-      BM_elem_flag_enable(e->v1, BM_ELEM_TAG);
-      BM_elem_flag_enable(e->v2, BM_ELEM_TAG);
+  else {
+    BM_ITER_MESH (e, &iter, bm, BM_EDGES_OF_MESH) {
+      if (BM_elem_flag_test(e, BM_ELEM_TAG)) {
+        BM_elem_flag_enable(e->v1, BM_ELEM_TAG);
+        BM_elem_flag_enable(e->v2, BM_ELEM_TAG);
+      }
     }
   }
 
